fixed testimonials misalignment in css layount 2.0

--- a/Nstyle.css
+++ b/Nstyle.css
@@ -989,6 +989,12 @@ button, input, optgroup, select, textarea {
   text-align: center;
 }
 
+.testimonials__content--container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .testimonial__rating--wrapper {
   display: flex;
   justify-content: center;
